src/test/ui/cycle-trait/cycle-trait-supertrait-direct.stderr
error[E0391]: cycle detected when computing the super predicates of `Chromosome`
  --> $DIR/cycle-trait-supertrait-direct.rs:3:1
   |
LL | trait Chromosome: Chromosome {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: ...which requires computing the super traits of `Chromosome`...
  --> $DIR/cycle-trait-supertrait-direct.rs:3:19
   |
LL | trait Chromosome: Chromosome {
   |                   ^^^^^^^^^^
   = note: ...which again requires computing the super predicates of `Chromosome`, completing the cycle
note: cycle used when collecting item types in top-level module
  --> $DIR/cycle-trait-supertrait-direct.rs:3:1
   |
LL | trait Chromosome: Chromosome {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
